static/css/style.css
@import "normalize.css";

/* font definitions */

@font-face {
    font-family: 'Fira Sans Condensed';
    font-style: normal;
    font-weight: 300; /* light */
    src: local('Fira Sans Condensed Light'), url(/fonts/FiraSansCondensed-Light.woff2) format('woff2'), url(/fonts/FiraSansCondensed-Light.woff) format('woff');
    font-display: swap;
}
			
@font-face {
    font-family: 'Fira Sans Condensed';
    font-style: normal;
    font-weight: 400; /* regular */
    src: local('Fira Sans Condensed Regular'), url(/fonts/FiraSansCondensed-Regular.woff2) format('woff2'), url(/fonts/FiraSansCondensed-Regular.woff) format('woff');
    font-display: swap;
}
			
@font-face {
    font-family: 'Fira Sans Condensed';
    font-style: normal;
    font-weight: 600; /* semibold */
    src: local('Fira Sans Condensed SemiBold'), url(/fonts/FiraSansCondensed-SemiBold.woff2) format('woff2'), url(/fonts/FiraSansCondensed-SemiBold.woff) format('woff');
    font-display: swap;
}

/* hljs stylesheet */

.hljs{display:block;overflow-x:auto;padding:0.5em;background:transparent;font-size:1rem}.hljs,.hljs-subst{color:var(--hljs-text-color)}.hljs-comment{color:var(--hljs-comment-color)}.hljs-keyword,.hljs-attribute,.hljs-selector-tag,.hljs-meta-keyword,.hljs-doctag,.hljs-name{font-weight:bold;color:var(--hljs-name-color)}.hljs-type,.hljs-string,.hljs-number,.hljs-selector-id,.hljs-selector-class,.hljs-quote,.hljs-template-tag,.hljs-deletion{color:var(--hljs-string-color)}.hljs-title,.hljs-section{color:var(--hljs-string-color);font-weight:bold}.hljs-regexp,.hljs-symbol,.hljs-variable,.hljs-template-variable,.hljs-link,.hljs-selector-attr,.hljs-selector-pseudo{color:var(--hljs-variable-color)}.hljs-literal,.hljs-built_in,.hljs-bullet,.hljs-code,.hljs-addition{color:var(--hljs-variable-color)}.hljs-meta,.hljs-meta-string{color:var(--hljs-meta-color)}.hljs-emphasis{font-style:italic}.hljs-strong{font-weight:bold}

/* freeston.me stylesheet */

:root {
    --text-color: #131516;
    --background-color: #f1efe4;
    --pop-color: #f7e5b7;
    --dark-pop-color:  #ea8f10;
    --title-color: #824e06;
    --link-color: var(--text-color);
    --hover-color: #7f6f61;

    /* hljs */
    --hljs-text-color: #444;
    --hljs-comment-color: #888888;
    --hljs-name-color: #824e06;
    --hljs-string-color: #a15910;
    --hljs-variable-color: #a26010;
    --hljs-literal-color: #34632e;
    --hljs-meta-color: #1f7199;	     
}

:root.dark-theme {
    --text-color: #f1efe4;
    --background-color: #25292b;
    --pop-color: #824e06;
    --dark-pop-color: #ea8f10;
    --title-color: #f7dd9b;
    --link-color: var(--text-color);
    --hover-color: var(--dark-pop-color);

    /* hljs */
    --hljs-text-color: #ddd;
    --hljs-comment-color: #888888;
    --hljs-name-color: #eda;
    --hljs-string-color: #eeaa00;
    --hljs-variable-color: #ef8030;
    --hljs-literal-color: #78A960;
    --hljs-meta-color: #1f7199;
}



@media (prefers-color-scheme: dark) {
  :root {
      --text-color: #f1efe4;
      --background-color: #25292b;
      --pop-color: #824e06;
      --dark-pop-color: #ea8f10;
      --title-color: #f7dd9b;
      --link-color: var(--text-color);
      --hover-color: var(--dark-pop-color);
      
      /* hljs */
      --hljs-text-color: #ddd;
      --hljs-comment-color: #888888;
      --hljs-name-color: #eda;
      --hljs-string-color: #eeaa00;
      --hljs-variable-color: #ef8030;
      --hljs-literal-color: #78A960;
      --hljs-meta-color: #1f7199;
  }

  :root.light-theme {
      --text-color: #131516;
      --background-color: #f1efe4;
      --pop-color: #f7e5b7;
      --dark-pop-color:  #ea8f10;
      --title-color: #824e06;
      --link-color: var(--text-color);
      --hover-color: #7f6f61;
      
      /* hljs */
      --hljs-text-color: #444;
      --hljs-comment-color: #888888;
      --hljs-name-color: #824e06;
      --hljs-string-color: #a15910;
      --hljs-variable-color: #ca6010;
      --hljs-literal-color: #34632e;
      --hljs-meta-color: #1f7199;
  }
}

*,
:after,
:before {
    box-sizing: border-box;
    color: inherit;
    background-color: inherit;
    font-family: inherit;
    overflow-wrap: break-word;
    border:0 solid;
}

body {
    font-family: 'Fira Sans Condensed', sans-serif;
    font-weight: 300;
    font-size: 15pt;
    line-height: 1.3;
    margin: 0 auto;
    padding: 24px;
    max-width: 42rem;
    color: var(--text-color);
    background-color: var(--background-color);
}

p {
    margin-block: 0.8rem;
}

img {
    max-width: 100%;
}

h1, h2, h3, h4, h5, h6 {
    font-weight: 600;
    line-height: 1;
    margin-bottom: 1rem;
    color: var(--title-color);
}

a {
    text-decoration-color: var(--hover-color);
    text-decoration-style: dotted;
    text-decoration-skip: spaces;
}

a:link { color: var(--link-color); }
a:visited { color: var(--link-color); }
a:hover { color: var(--hover-color); }

ul {
    padding: 0px;
    list-style-type: none;
}

ol {
    padding-left: 12px;
}

nav {
    margin-bottom: 2rem;
    font-weight: 400;
}

nav ul {
    display: flex;
    flex-wrap: wrap;
    gap: 1.5rem 0.5rem;
    justify-content: flex-start;
    
}

nav a {
    text-decoration: none;
    padding: 0.2rem 0.6rem;
    border-radius: 16px;
    background: var(--pop-color);
}

nav a:hover {
    color: inherit;
    background: var(--dark-pop-color);
}

ul.hlist {
    display: inline;
}

ul.hlist li {
    margin-right: 4px;
    display: inline;
}

.header {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    justify-content: flex-start;
}

button#theme-toggle {
    height: 0.8rem;
    width: 0.8rem;
    border-radius: 0.8rem;
    background: var(--title-color);
}

button#theme-toggle:hover {
    background: var(--dark-pop-color);
}

.date {
    font-style: italic;
}

.freeston-title {
    font-weight: 600;
}

a.title-link:link, a.title-link:visited {
    text-decoration: none;
    color: var(--title-color);
}

.post-tags {
    margin-top: 36px;
}

footer {
    margin-top: 48px;
    font-size: 1rem;
}

.row {
    display: table;
    border-collapse: collapse;
    width: 100%;
    margin-bottom: 0;
}

.item {
    display: table-cell;
    vertical-align: top;
}

.item img {
    display: block;
    width: 100%;
    height: auto;
}

.post-meta {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.post-meta > a {
    font-weight: 600;
    font-size: 0.75rem;
    padding: 0.25rem 0.5rem;
    border-radius: 0.5rem;
    background: var(--pop-color);
    text-decoration: none;
}

.post-meta > a:hover {
    color: inherit;
    background: var(--dark-pop-color);    
}

/* Home page project grid */

.projects {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    margin: 16px 0;
}

.project {
    flex: 1;
    background-color: var(--pop-color);
    border-radius: 4rem;
    min-width: 10em;
    margin: 4px 0;
    padding: 16px 32px;
    text-align: center;
}

.project h2 {
    margin: 0 0 12px 0;
    font-size: 24px;
}

.project p {
    margin: 0px;
    align-content: center;
}

/* Image grid  */

.image-grid {
  display: grid;
  grid-gap: 0.2rem;
}

.image-grid a {
    line-height: 0;
}

.image-grid p {
    position: absolute;
    font-size: 0.75rem;
    line-height: 1;
    margin: 0;
    padding: 0.2rem;
    background-color: var(--background-color);
}

@supports (width: min(80px, 100%)) {
  .image-grid {
    grid-template-columns: repeat(auto-fit, minmax(min(80px, 100%), 1fr));
  }
}

.cv {
    max-width: 32rem;
}

.cv ul {
    list-style-type: square;
    font-size: 1rem;
}

